--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "simpli-ui",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "A Simple UI Component Library",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types.d.ts",
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
     "storybook": "storybook dev -p 6006",
